<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teamfour.sharedpreferences.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/text_tvFileName"
        android:id="@+id/tvFileName" />

    <EditText
        android:id="@+id/etFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/text_tvAutoFocus"
        android:id="@+id/tvAutoFocus" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_rbYes" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rbNo" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/text_tvAutoShot"
        android:id="@+id/tvAutoShot" />

    <EditText
        android:id="@+id/etAutoShotTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btPrefSave"
            android:onClick="onPrefSaveClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btPrefSave" />

        <Button
            android:id="@+id/btPrefLoad"
            android:onClick="onPrefLoadClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btPrefLoad" />

        <Button
            android:id="@+id/btDefault"
            android:onClick="onDefaultClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btDefault" />
    </LinearLayout>
</RelativeLayout>
